crates/wgso/tests/cases_invalid/duplicated_buffers/.expected
error: same name `duplicated` used for two storage variables
--> ./tests/cases_invalid/duplicated_buffers/in_different_file_1.wgsl
 |
 |
::: ./tests/cases_invalid/duplicated_buffers/in_different_file_2.wgsl
 |
 |
error: redefinition of `duplicated`
 --> ./tests/cases_invalid/duplicated_buffers/inside_same_file.wgsl:2:26
  |
1 | var<storage, read_write> duplicated: u32;
  |                          ^^^^^^^^^^ previous definition of `duplicated`
2 | var<storage, read_write> duplicated: i32;
  |                          ^^^^^^^^^^ redefinition of `duplicated`
  |